# slae

py_tests/Chebyshev_SSOR_tests/: main.py  test_L.txt  test_b.txt  test_data.txt  test_i.txt  test_j.txt  test_w.txt  test_x.txt
py_tests/Iteration_Chebyshev_Gauss_Seidel_tests/: main.py  test_L.txt  test_b.txt  test_data.txt  test_i.txt  test_j.txt  test_x.txt
py_tests/Iteration_tests/: main.py  test_L.txt  test_b.txt  test_data.txt  test_i.txt  test_j.txt  test_l_min.txt  test_x.txt
py_tests/QR_test/: Q.txt  R.txt  main.py  matrix.txt
py_tests/SRC_tests/: main.py  test_D.txt  test_X.txt  test_data.txt  test_i.txt  test_indptr.txt  test_j.txt
py_tests/Symmetric_Iteration_tests/: main.py  test_L.txt  test_b.txt  test_data.txt  test_i.txt  test_j.txt  test_x.txt
py_tests/TEST/: main.py
py_tests/TEST_08_04/: main.py  test_L_max.txt  test_L_min.txt  test_b.txt  test_data.txt  test_i.txt  test_j.txt  test_x.txt
py_tests/Universal_Iteraton_test/: main.py  test_L_CHEB_GS.txt  test_L_SSOR.txt  test_L_SYM_GS.txt  test_L_max.txt  test_L_min.txt  test_b.txt  test_data.txt  test_i.txt  test_j.txt  test_w.txt  test_x.txt
py_tests/tridiagonal_test/: main.py  testA.txt  testd.txt  testx.txt
slae/: CMakeLists.txt  slae_solver.hpp  tridiagonal_matrix.hpp
slae/Google_tests/: CMakeLists.txt  tridiagonal_test.cpp
slae/src/: CMakeLists.txt  CSR.hpp  CSR_matrix.hpp  Math.hpp  Matrix.hpp  slae_solver.hpp  tridiagonal_matrix.hpp
slae/tests/: CMakeLists.txt  CRS_matrix_test.cpp  CSR_matrix_test.cpp  Conjugate_Gradient_Holetski_tests.cpp  GMRES_test.cpp  Iteration_methods_simple_tests.cpp  Iteration_methods_tests.cpp  Matrix_test.cpp  QR_decomposition_test.cpp  test_tesT.cpp  tridiagonal_test.cpp
slae/tests/TEST_04_03/: Number3.cpp  README.md  test3_data1.txt  test4_data_Gauss.txt  test4_data_MPI.txt  test4_data_jacobi.txt
slae/tests/TEST_08_04/: README.MD  TEST_08_04.cpp  test_count_CHEB_MPI_second.txt  test_count_MPI.txt  test_count_SOR.txt  test_r_CHEB_MPI.txt  test_r_CHEB_MPI_coord_ex2.txt  test_r_CHEB_MPI_ex2.txt  test_r_CHEB_MPI_second.txt  test_r_Conjugate_Gradient_coord_ex2.txt  test_r_Conjugate_Gradient_ex2.txt  test_r_MPI.txt  test_r_MPI_coord_ex2.txt  test_r_MPI_coord_opt_ex2.txt  test_r_MPI_ex2.txt  test_r_MPI_opt.txt  test_r_MPI_opt_ex2.txt  test_r_SOR.txt  test_r_Steepest_Descent_coord_ex2.txt  test_r_Steepest_Descent_ex2.txt
